== 2026-02-15 23:38 == Bugfix: Claim log showing channel ID instead of name (v1.2.0-beta.12) ==

Claims from untracked channels (via user-level PubSub) showed raw channel ID
instead of display name. Now resolves name via GQL and caches it.
- internal/farmer/farmer.go (nameCache, resolveChannelName, claim handler)
- internal/twitch/gql.go (GetChannelNameByID query)

== 2026-02-15 03:37 == Bugfix: Auto-select not triggering when matched channels are offline (v1.2.0-beta.11) ==

Auto-select for drop channels only triggered when zero channels matched a campaign.
Now also triggers when matched channels exist but are ALL offline, so a live temp
channel gets created from the allowed list or game directory.
- internal/farmer/drops.go (processDrops auto-select condition)

== 2026-02-15 01:02 == Bugfix: Drop assigned to multiple channels instead of one (v1.2.0-beta.10) ==

All matching channels got P0 + drop info for the same drop, wasting Spade slots.
Now picks only the single best channel per drop (watching > online > offline, permanent preferred).
- internal/farmer/drops.go (processDrops channel selection logic)

== 2026-02-15 00:05 == Tweak: Reduce drop check interval to 5 min (v1.2.0-beta.9) ==

Drop inventory check reduced from 10 min to 5 min for faster claim detection.
- internal/farmer/drops.go
- internal/farmer/farmer.go (log message)

== 2026-02-14 19:49 == Feature: Update notification system ==

Background version checker that queries GitHub releases and compares semver.
Shows a yellow update banner in both Web UI and TUI when a new version is available.
- Beta users see both newer stable and newer beta releases
- Stable users only see newer stable releases
- Logs "[Update] New version available: ..." on first discovery
- Checks after 10s on startup, then every 6 hours
- Silent on error (retry next cycle)
- New file: internal/farmer/update.go (parseVersion, compareVersions, updateCheckLoop, GetUpdateInfo)